enum CFG_KEYWORD_NAME
{
	prof_all = 0;
	prof_tiansisi = 1;
	prof_xinrourou = 2;
	prof_hualun = 3;
	prof_baimifan = 4;
	conste_all = 0;
	conste_baiyang = 1;
	conste_jinniu = 2;
	conste_shuangzi = 3;
	conste_juxie = 4;
	conste_shizi = 5;
	conste_chunv = 6;
	conste_tiancheng = 7;
	conste_tianxie = 8;
	conste_sheshou = 9;
	conste_moxie = 10;
	conste_shuiping = 11;
	conste_shuangyu = 12;
	item_type_consume = 0;
	item_type_equip = 1;
	item_type_strong = 2;
	item_type_diamond = 3;
	item_type_material = 4;
	item_type_other = 5;
	item_type_quest = 6;
	equip_type_weapon = 0;
	equip_type_hat = 1;
	equip_type_dress = 2;
	equip_type_shoes = 3;
	equip_type_necklace = 4;
	equip_type_jewelry = 5;
	equip_type_fashion = 6;
	skill_type_instant = 0;
	skill_type_passive = 1;
	skill_type_enbuff = 2;
	skill_type_debuff = 3;
	skill_type_multi = 4;
	skill_type_special = 5;
	monster_type_NPC = 0;
	monster_type_normal = 1;
	monster_type_elite = 2;
	monster_type_leader = 3;
	monster_type_BOSS = 4;
	monster_type_BIG_BOSS = 5;
	npc_func_talk = 0;
	npc_func_sell = 1;
	npc_func_trade = 2;
	npc_func_learn = 3;
	action_type_single = 0;
	action_type_mutual = 1;
	quest_type_talk = 0;
	quest_type_kill = 1;
	quest_type_collect = 2;
	quest_type_boss = 3;
	fight_type_wait = 0;
	fight_type_normal = 1;
	fight_type_skill = 2;
	fight_type_defence = 3;
	fight_type_dead = 4;
	instance_node_type_null = 1;
	instance_node_type_start = 2;
	instance_node_type_boss = 3;
	instance_node_type_fight = 4;
	instance_node_type_trap = 5;
	instance_node_type_rand = 6;
	instance_node_type_heal = 7;
	instance_node_type_stop = 8;
	instance_node_type_forward = 9;
	instance_node_type_backward = 10;
	instance_node_type_luck = 11;
	instance_node_type_show = 12;
	instance_node_type_elite = 13;
	instance_node_type_money = 14;
	instance_node_type_box = 15;
	instance_node_type_transport = 16;
	instance_node_type_slave_end = 100;
	rand_node_type_bless = 1;
	rand_node_type_curse = 2;
	rand_node_type_shop = 3;
	rand_node_type_money = 4;
	rand_node_type_elite = 5;
	rand_node_type_drop_rate = 1;
	special_item_id_dice = 60001;
	special_item_id_nowar = 60002;
}
